objects/JBCXM__SurveyQuestion__c.object
<CustomObject>
    <description>This is used to store questions of survey</description>
    <fields>
        <fullName>JBCXM__AllowCaption__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Caption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__AllowComment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__AllowHeaderGrouping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to enable header grouping for question type of Matrix,and NPS</description>
        <label>AllowHeaderGrouping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NPS</fullName>
                </value>
                <value>
                    <fullName>CXPI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__Caption__c</fullName>
        <label>Caption</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__ClonedFrom__c</fullName>
        <label>ClonedFrom</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Code__c</fullName>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__CommentLabel__c</fullName>
        <label>Comment Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__DataType__c</fullName>
        <label>DataType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Dependent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to identify whether this question is dependent question  or not</description>
        <label>Dependent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__DisplayPreference__c</fullName>
        <label>DisplayPreference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In line</fullName>
                </value>
                <value>
                    <fullName>Next question</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__EnableAnswerScoring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Answer Scoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__GroupHeaderType__c</fullName>
        <description>This is used to see the type of grouping done at header label either by text or icon</description>
        <label>GroupHeaderType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Icon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__HasPageBreak__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Page Break</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__HasRules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the flag which checks whether it has any logic rules associated.</description>
        <label>HasRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Header Question Lookup</description>
        <label>Header Question</label>
        <referenceTo>JBCXM__SurveyQuestion__c</referenceTo>
        <relationshipLabel>Survey Question (Header Question)</relationshipLabel>
        <relationshipName>Question_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__HelpText__c</fullName>
        <label>Help Text</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Image__c</fullName>
        <description>Help Image</description>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsInternal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsRequired__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsTranslation__c</fullName>
        <formula>NOT(ISBLANK(JBCXM__TranslationFor__c))</formula>
        <label>Is translation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Language Code</description>
        <label>Language</label>
        <referenceTo>JBCXM__GSLanguage__c</referenceTo>
        <relationshipLabel>Survey Question Language</relationshipLabel>
        <relationshipName>QuestionLanguage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__LibQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Library Question Lookup</description>
        <label>Library Question</label>
        <referenceTo>JBCXM__SurveyQuestion__c</referenceTo>
        <relationshipLabel>Survey Question (Library Question)</relationshipLabel>
        <relationshipName>Survey_Question</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__PageInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup on PageInfo</description>
        <label>PageInfo</label>
        <referenceTo>JBCXM__PageInfo__c</referenceTo>
        <relationshipLabel>Survey Question</relationshipLabel>
        <relationshipName>Survey_Question</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ParentQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Question</label>
        <referenceTo>JBCXM__SurveyQuestion__c</referenceTo>
        <relationshipLabel>Survey Question</relationshipLabel>
        <relationshipName>Parent_Question</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Rating__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Maximum number of stars user can assign for rating type question.</description>
        <inlineHelpText>Maximum number of stars user can assign for rating type question.</inlineHelpText>
        <label>Rating stars count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__ReportingLabel__c</fullName>
        <label>Reporting Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ShowNeutral__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Neutral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyMaster__c</fullName>
        <label>SurveyMaster</label>
        <referenceTo>JBCXM__Survey__c</referenceTo>
        <relationshipLabel>Survey Question</relationshipLabel>
        <relationshipName>Survey_Question</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__Title__c</fullName>
        <label>Title</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__TranslationFor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Translation For</label>
        <referenceTo>JBCXM__SurveyQuestion__c</referenceTo>
        <relationshipLabel>Translated Question</relationshipLabel>
        <relationshipName>TranslatedQuestion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MatrixSingleAnswer</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Ranking</fullName>
                </value>
                <value>
                    <fullName>SingleSelect</fullName>
                </value>
                <value>
                    <fullName>MultiSelect</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Textarea</fullName>
                </value>
                <value>
                    <fullName>Comment</fullName>
                </value>
                <value>
                    <fullName>NPS</fullName>
                </value>
                <value>
                    <fullName>MatrixMultipleAnswers</fullName>
                </value>
                <value>
                    <fullName>Matrix</fullName>
                </value>
                <value>
                    <fullName>Arraypoint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__UserResponseCount__c</fullName>
        <inlineHelpText>This field is updated through Apex after each response.</inlineHelpText>
        <label>User Response Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Question</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>JBCXM__Type__c</columns>
        <columns>JBCXM__ParentQuestion__c</columns>
        <columns>JBCXM__Code__c</columns>
        <columns>JBCXM__Title__c</columns>
        <columns>JBCXM__Dependent__c</columns>
        <columns>JBCXM__HasRules__c</columns>
        <columns>JBCXM__DisplayOrder__c</columns>
        <columns>JBCXM__IsActive__c</columns>
        <columns>JBCXM__SurveyMaster__c</columns>
        <columns>JBCXM__AllowComment__c</columns>
        <columns>JBCXM__CommentLabel__c</columns>
        <columns>JBCXM__UserResponseCount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>JBCXM__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SuQ-{00000}</displayFormat>
        <label>Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Question</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>